--- a/popup.html
+++ b/popup.html
@@ -16,6 +16,7 @@
     <script src="popup.js"></script>
   </head>
   <body>
+      <div id="content"></div>
     <h1>Make some things to test!</h1>
     <button id="create-step">Add Step</button>
   </body>
