fixed jsx linting, hello world in react

--- a/popup.html
+++ b/popup.html
@@ -13,11 +13,11 @@
       }
     </style>
 
-    <script src="popup.js"></script>
   </head>
   <body>
       <div id="content"></div>
     <h1>Make some things to test!</h1>
     <button id="create-step">Add Step</button>
+    <script src="dist/app.bundle.js"></script>
   </body>
 </html>
