more restructuring, step structure

--- a/popup.html
+++ b/popup.html
@@ -11,6 +11,14 @@
         font-family: "Arial", sans-serif;
         font-size: 100%;
       }
+
+      .flow {
+          border-bottom: solid 1px #ccc;
+      }
+      .flow-name {
+          cursor: pointer;
+          padding: 1em 0;
+      }
     </style>
 
   </head>
