--- a/popup.html
+++ b/popup.html
@@ -11,7 +11,7 @@
         }
         html, body {
             min-height: 350px;
-            width: 500px;
+            max-width: 500px;
         }
         body {
             border: solid 1px #000;
@@ -27,9 +27,16 @@
         button:hover {
             text-decoration: underline;
         }
-        input {
+        input, select {
             border: solid 1px #ccc;
+            margin-bottom: 1em;
         }
+        label {
+            display: block;
+            font-size: 11px;
+            font-weight: bold;
+        }
+
         .app-header {
             background: #444;
             border-bottom: solid 1px #ccc;
@@ -94,6 +101,21 @@
             border-left: solid 1px #ccc;
             margin: 1em 2em;
             padding-left: 2em;
+        }
+
+        .flow-result {
+            display: none;
+        }
+        @media (min-width: 1024px) {
+            .flow-result {
+                border-bottom: solid 1px #ccc;
+                border-left: solid 1px #ccc;
+                display: block;
+                padding: 2em;
+                position: absolute;
+                right: 0;
+                top: 0;
+            }
         }
     </style>
 
