--- a/popup.html
+++ b/popup.html
@@ -11,6 +11,7 @@
         }
         html, body {
             min-height: 350px;
+            min-width: 320px;
             max-width: 500px;
         }
         body {
